--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/16.3.5/Tween.min.js" type="text/javascript"></script>
 <script src="js/three.min.js" type="text/javascript"></script>
 <script src="js/script.js" type="text/javascript"></script>
 </body>
